# MagicCube-CPP

./: .vimset  CMakeLists.txt  Cube.cpp  Cube.h  Face.cpp  MagicCube.cpp  MagicCube.h  MagicWidget.cpp  MagicWidget.h  RotationState.cpp  RotationState.h  magicwidget.cpp  magicwidget.h  main.cpp
