cmake_minimum_required(VERSION 2.8.11)
project(MagicCube)
set(CMAKE_AUTOMOC ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_definitions(-g -std=c++11)
aux_source_directory(. SRC_LIST)
find_package(Qt5Widgets)
find_package(Qt5Gui)
find_package(Qt5OpenGL)
find_package(OpenGL REQUIRED)
if(NOT OPENGL_FOUND)
	message(STATUS wrong)
else(OPENGL_FOUND)
	include_directories(${OPENGL_INCLUDE_DIR})
	link_directories(${OPENGL_gl_LIBRARY})
endif(NOT OPENGL_FOUND)
add_executable(out ${SRC_LIST})
target_link_libraries(out Qt5::OpenGL Qt5::Widgets Qt5::Gui ${OPENGL_LIBRARIES})
