cmake_minimum_required(VERSION 2.8.12)
project(MagicCube)
set(CMAKE_AUTOMOC ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(Qt5Core)
find_package(Qt5Gui)
find_package(Qt5Widgets)
find_package(Qt5OpenGL)
find_package(OpenGL)
aux_source_directory(. SRC_LIST)
add_definitions(-std=c++11 -Wl,-Bstatic -lpthread -Wl,-Bdynamic)
add_executable(out ${SRC_LIST})
link_directories(${MINGW_LIB})
target_link_libraries(out Qt5::Core Qt5::Gui Qt5::Widgets Qt5::OpenGL OpenGL::GL OpenGL::GLU)
